istio/manifests/telemetry.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana
  namespace: proxy
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    proxy-group: proxy-group-1
  servers:
  - hosts:
    - 'grafana.example.local'
    port:
      name: http-grafana
      number: 80
      protocol: http
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: istio-system
spec:
  hosts:
  - "grafana.example.local"
  gateways:
  - proxy/grafana
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana
        port:
          number: 3000
